# vgi-disasm

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/disasm-core/: Cargo.toml
crates/disasm-core/src/: capabilities.rs  engine.rs  entrypoint.rs  groups.rs  imports.rs  lib.rs  limits.rs  mappings.rs  probe.rs  sections.rs  strings.rs  sweep.rs
crates/disasm-core/tests/: containers.rs  fuzz_nopanic.rs  vectors.rs
crates/disasm-core/tests/common/: mod.rs
crates/disasm-wasm/: Cargo.toml
crates/disasm-wasm/src/: lib.rs
crates/disasm-worker/: Cargo.toml
crates/disasm-worker/src/: arrow_io.rs  lib.rs  main.rs  meta.rs
crates/disasm-worker/src/scalar/: mod.rs  probe.rs  version.rs
crates/disasm-worker/src/table/: capabilities.rs  disassemble.rs  imports.rs  mod.rs  sections.rs  strings.rs
test/sql/: containers.test  disassemble.test  probe.test  triage.test
test/sql/data/: hello-macho-arm64
wasm/: build.sh
