[workspace]
resolver = "2"
members = ["crates/disasm-core", "crates/disasm-worker", "crates/disasm-wasm"]
# disasm-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p disasm-wasm`.
default-members = ["crates/disasm-core", "crates/disasm-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-disasm"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.11 and
# arrow 59 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
# VGI Rust SDK (worker side). 0.24 provides the wasm `vgi::wasm_worker!` macro
# used by disasm-wasm; requires rustc 1.97 (see rust-version above). Base
# (feature-less) so each target can opt in: the native build takes the SDK's
# real defaults (`sqlite` + `transport-http`), while the wasm build must NOT —
# tokio/mio/axum and bundled SQLite do not compile for wasm32, and the browser
# transport serves over a byte channel rather than HTTP. Features are additive,
# and the two are behind mutually-exclusive target cfgs.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# Disassembly + container parsing (all permissive; see README "Licensing"):
#   capstone  -> MIT bindings over the BSD-3-Clause Capstone C engine (bundled).
#   goblin    -> MIT PE/ELF/Mach-O parser (fuzz-hardened).
#   object    -> MIT/Apache-2.0 cross-format object access (secondary reader).
capstone = "0.14"
goblin = "0.10"
object = "0.39"

# The pure logic crate (container parse, sweep, triage), shared by the worker
# and exercised directly by golden-vector + proptest suites.
disasm-core = { path = "crates/disasm-core" }

[profile.release]
opt-level = 2
# Strip symbols + debug info from the release binary. The worker has no need for
# in-binary backtraces in production; build a debug profile locally if you need
# symbols.
strip = true
