[package]
name = "disasm-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker that disassembles PE/ELF/Mach-O binaries and shellcode into instruction rows over Apache Arrow, with section/import/string/capability triage for DuckDB"

[[bin]]
name = "disasm-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
disasm-core.workspace = true
log = "0.4"
env_logger = "0.11"
